projeto-compilador/trabalho-final/TRABALHO FINAL DA DISCIPLINA-20241002/Karloff.jj
PARSER_BEGIN(Karloff)
import java.io.*;
import java.util.ArrayList;
import ast.*;
public class Karloff {

  public static void main(String args[]) throws ParseException,IOException {
    
    Karloff analisador = new Karloff(new FileInputStream(args[0]));
    Prog arv = analisador.Karloff();
    //FileWriter file = new FileWriter("./KarloffTeste.java");
    //PrintWriter print = new PrintWriter(file);
    //file.close();
    System.out.println(arv);
  }

}

PARSER_END(Karloff)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
  <MAIN: "main">
| <ACHAVES: "{">
| <FCHAVES: "}">
| <VOID: "void">
| <APAR: "(">
| <FPAR: ")">
| <VAR: "newVar">
| <PV: ";">
| <FLOAT: "float">
| <ATRIB: "=">
| <PRINT: "printOut">
| <IF: "if">
| <WHILE: "while">
| <RETURN: "return">
| <BOOL: "boolean">
| <PLUS: "+">
| <MINUS: "-">
| <MULT: "*">
| <DIV: "/">
| <TRUE: "true">
| <FALSE: "false">
| <COMP: "==">
| <OR: "|">
| <LESSER: "<">
| <BIGGER: ">">
| <AND: "&">
| <THEN: "then">
| <FUN: "fun">
| <VIRGULA: ",">
| <READ: "readInput">
}

TOKEN :
{
  <NUM : (["0"-"9"])+("."(["0"-"9"])?)?("E"("+" | "-")? ["0"-"9"])?>
 |< ID: ["a"-"z","A"-"Z"](("_")?["a"-"z","A"-"Z","0"-"9"])*>

}


Prog Karloff () :
{Main main = null; ArrayList<Fun>  listaFuncao;}
{

  main  = Main() listaFuncao = Func() <EOF> 
  {return new Prog(main, listaFuncao);}

}

Main Main () :
{ArrayList<VarDecl>  varDecl = null; ArrayList<Comando> comandos = null ;}
{

 <VOID> <MAIN> <APAR> <FPAR> <ACHAVES> varDecl = VarDecl() comandos=SeqComandos() <FCHAVES> 

 {
  return new Main(varDecl, comandos);
 }
}
//VARDECL -> VARDECL "newVar" TIPO TOKEN_id ";" | vazio
ArrayList<VarDecl>  VarDecl() :
{Token var = null; String tipo = null; ArrayList<VarDecl> listaVarDecl = new ArrayList<VarDecl>();}
{

 (<VAR> tipo = Tipo() var=<ID> <PV>{listaVarDecl.add(new VarDecl(tipo, var.image));})*
 {return listaVarDecl;}
}
//TIPO -> "float" | "boolean" | "void"
String  Tipo() :
{String tipo = null;}
{
 ( <FLOAT>{tipo = "float";}
| <BOOL>{tipo = "boolean";}
| <VOID>{tipo = "void";} )
  {return tipo;}

}

// SEQCOMANDOS ->  COMANDO +
ArrayList<Comando> SeqComandos() :
{ArrayList<Comando> comandos = new ArrayList<Comando>(); Comando c = null;}
{

 (c = Comando(){comandos.add(c);})+
 {return comandos;}
}

// COMANDO -> TOKEN_id COMANDO’
// | "if" EXP "then" "{" SEQCOMANDOS "}" ";"
// | "while" EXP "{" SEQCOMANDOS "}" ";"
// | "return" EXP ";"
// | "printOut" EXP ";"
Comando Comando() :
{
  Comando resultado = null;
  Comando comando_ = null;
}
{
   (
     resultado = Atribuicao()
|   resultado = Cond()
|  resultado = Loop()
|  resultado  = Return()
|  resultado = Print()

   )

  {return resultado;}  
}


//
// COMANDO ->TOKEN_id "=" EXP ";" | TOKEN_id = "readInput" "(" ")" ";" | TOKEN_id "(" LISTAEXP? ")" ";"
Comando Atribuicao() : 
{Token var = null;
  Comando c = null;
  Exp e = null;
  ArrayList<Exp> listaE = new ArrayList<Exp>();
}
{
  (var = <ID> (
    (<ATRIB>(
     ( e = Exp() <PV>{
        c = new CAtribuicao(0, var.image, e);
      })
      | (<READ><APAR> <FPAR> <PV>{
        c = new CReadInput(0, var.image);
      })
    ))
    | (<APAR> (listaE = ListaExp())? <FPAR> <PV>)  {
      c = new CChamadaFun(0, var.image, listaE);
    }
    )
  )

  //(var = <ID> 
   // (<ATRIB> ( e = Exp() <PV>{
  //    c = new CAtribuicao(0, var.image, e);
  //  } 
  //  | <READ> <APAR> <FPAR>) {
      // c = new CReadInput(0, var.image);
      // })
      // | <APAR> (listaE = ListaExp())? <FPAR> <PV>{
      //   c = new CChamadaFun(0, var.image, listaE);
      // })
  {
    return c;
  }
}

// | "if" EXP "then" "{" SEQCOMANDOS "}" ";"
Comando Cond() :
{Exp e = null; ArrayList<Comando> comandos = null;}
{
  <IF> e = Exp() <THEN> <ACHAVES> comandos = SeqComandos() <FCHAVES> <PV> 
  {return new CIf(0,  e, comandos);}
}
// | "while" EXP "{" SEQCOMANDOS "}" ";"
Comando Loop() :
{Exp e = null; ArrayList<Comando> comandos = null;}
{
  (<WHILE> e = Exp() <ACHAVES> comandos = SeqComandos() <FCHAVES> <PV>)
  {return new CWhile(0, e, comandos);}
}

// | "return" EXP ";"
Comando Return() :
{Exp e = null;}
{
  <RETURN> e = Exp() <PV>
  {return new CReturn(0, e);}
}

// | "printOut" EXP ";"
Comando Print() :
{Exp e = null;}
{
  <PRINT> e = Exp() <PV>
  {return new CPrint(0 , e);}
}

//Perguntar
//EXP -> EXP´ (OP EXP ")" )* 
Exp Exp() :
{Exp e1 = null;
 Exp e2 = null;
  String op = null;
}
{

 e1 = ExpL() (op = Op() e2 = ExpL())*
  {
    return op == null ? e1 : new EOpExp(op, e1, e2);
  }
}
//Perguntar
//EXP´ -> "(" EXP OP EXP ")" | FATOR
Exp ExpL():
{Exp e;}
{
   (<APAR> e = Exp() <FPAR>
 | e = Fator())
 {return e;}
}
// FATOR -> TOKEN_id´
//| TOKEN_numliteral | "true" | "false"
Exp Fator() :
{
  Token var = null;
  Token num = null;
  Exp result = null;
}
{
  ((var = <ID>  result = Fator_(var.image))
 |(num =  <NUM> {
    result = new EFloat(Float.parseFloat(num.image));
 })
 | (<TRUE>{
    result = new ETrue();
 })
 | (<FALSE>{
    result = new EFalse();
 })
  )
 {
  return result;
 }
}

//FATOR’ →  "(" LISTAEXP? ")" | vazio
Exp Fator_ (String  var) :
{  ArrayList<Exp> exps = null; Token t = null;}
{
    (t=<APAR> (exps=ListaExp())? <FPAR>)? {return t == null ? new EVar(var) : new EChamadaFun(var, exps);}
}
//OP -> "+" | "-" | "*" | "/" | "&" | "|" | "<" | ">" | "=="
String Op() :
{String op = null;}
{

 (  <PLUS>{op = "+";}
 | <MINUS>{op = "-";}
 | <MULT>{op = "*";}
 | <DIV>{op = "/";}
 | <AND>{op = "&";}
 | <OR>{op = "|";}
 | <LESSER>{op = "<";}
 | <BIGGER>{op = ">";}
 | <COMP>{op = "==";}
 )
 {return op;}

}
//LISTAEXP -> EXP  LISTAEXP´ 
ArrayList<Exp> ListaExp() :
{Exp e = null;  ArrayList<Exp> lista = new ArrayList<Exp>();}
{

 e = Exp() {
  lista.add(e);
 }ListaExpL(lista)

 {return lista;}

}
//LISTAEXP´ -> "," EXP LISTAEXP´ | vazio 
void ListaExpL( ArrayList<Exp> lista) :
{Exp e = null;}
{
  (<VIRGULA> e = Exp() {lista.add(e);} ListaExpL(lista))?

}
//LISTAARG -> TIPO TOKEN_id  LISTAARG´ 
ArrayList<ParamFormalFun>  ListaArg() :
{
  String tipo = null ;
  Token var =  null;
  ArrayList<ParamFormalFun> listaArg = new ArrayList<ParamFormalFun>();}
{

 (tipo = Tipo()  var = <ID> {
  listaArg.add(new ParamFormalFun(tipo, var.image));

 }(ListaArgL(listaArg)))
  {return listaArg;}
}
//LISTAARG´ -> "," TIPO TOKEN_id LISTAARG´
void ListaArgL(ArrayList<ParamFormalFun> listaArg ) :
{String tipo = null ; Token var =  null;}
{
  <VIRGULA> tipo = Tipo() var = <ID>{
    listaArg.add(new ParamFormalFun(tipo, var.image));
  } (ListaArgL(listaArg))?

}
//FUNC ->  FUNC´ 
ArrayList<Fun>  Func() :
{ArrayList<Fun> funs = new ArrayList<Fun>();}
{

  FuncL(funs)
{
  return funs;
}
}
//FUN'-> "fun" TIPO TOKEN_id "(" LISTAARG? ")" "{" VARDECL SEQCOMANDOS "}" FUN' | vazio
void FuncL(ArrayList<Fun> funs) : 
{String tipo = null; 
  Token var = null;
  ArrayList<ParamFormalFun> args = new ArrayList<ParamFormalFun>();
  ArrayList<Comando> comandos =  null;
  ArrayList<VarDecl> varDecl = null;
}
{
  (<FUN> tipo = Tipo() var = <ID> <APAR> (args = ListaArg())? <FPAR> <ACHAVES> varDecl = VarDecl() comandos = SeqComandos() <FCHAVES> {
    funs.add(new Fun(var.image, args, tipo , varDecl, comandos));
  } FuncL(funs))?
}
